fix(#12936): settings editor height should flex on firefox
There is a lot of debt in this area that should be addressed next planning week: https://github.com/sourcegraph/sourcegraph/issues/12945.

--- a/web/src/components/Area.scss
+++ b/web/src/components/Area.scss
@@ -64,7 +64,10 @@ $area-max-width: 64rem;
     &__content {
         flex: 1;
         &-inner {
-            //height: 100%;
+            display: flex;
+            flex-direction: column;
+            flex: 1;
+            height: 100%;
         }
     }
 }
