--- a/web/src/org/OrgsArea.scss
+++ b/web/src/org/OrgsArea.scss
@@ -4,7 +4,12 @@
 
 .orgs-area {
     width: 100%;
+    display: flex;
+    flex-direction: column;
     &__content {
         height: 100%;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
     }
 }
