--- a/web/src/org/area/OrgArea.scss
+++ b/web/src/org/area/OrgArea.scss
@@ -3,3 +3,16 @@
 @import '../OrgAvatar';
 @import './OrgHeader';
 @import './OrgMembersPage';
+
+.org-area {
+    display: flex;
+    flex-direction: column;
+    &__content {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        &-inner {
+            width: 100%;
+        }
+    }
+}
